--- a/.github/.OwlBot.yaml
+++ b/.github/.OwlBot.yaml
@@ -28,5 +28,5 @@ deep-copy-regex:
   dest: "/owl-bot-staging/$1/grpc-google-cloud-channel-$1/src"
 - source: "/google/cloud/channel/(v.*)/.*-java/gapic-google-.*/src"
   dest: "/owl-bot-staging/$1/google-cloud-channel/src"
-- source: "/google/cloud/java-bigquery/(v.*)/.*-java/samples/snippets/generated"
+- source: "/google/cloud/channel/(v.*)/.*-java/samples/snippets/generated"
   dest: "/owl-bot-staging/$1/samples/snippets/generated"
